<resources>
    <string name="app_name">Practica_1</string>
    <string name="on_screen_text">Введите координаты</string>
    <string name="view">view</string>
    <string name="map">map</string>
    <string name="info">info</string>
    <string name="starting_text">Starting Text</string>
    <string name="go_back">Go back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find">FIND</string>
    <string name="objectlist">Список объектов</string>
    <string name="text">Text</string>
    <string name="current_event_text">Текущее событие:</string>
    <string name="Current_info_consts">Созведия:</string>
    <string name="next">Next</string>
    <string name="current_events">Current events</string>
    <string name="region">Region:</string>
    <string name="base_region">base region</string>
    <string name="europe">Europe</string>
    <string name="asia">Asia</string>
    <string name="australia">Australia</string>
    <string name="base">Base</string>
    <string name="add_new">Add new</string>
    <string name="set_new">set new</string>
    <string name="amount_of_stars">Amount of stars:</string>

</resources>