<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragment.CurrentEvent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:background="@color/background">
        <ImageView
            android:id="@+id/current_img"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="75dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/moon"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />
        <TextView
            android:id="@+id/current_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_img"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:text="@string/current_event_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/current_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_text"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:text="@string/Current_info_consts"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/current_const"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_info"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:text="@string/Current_info_consts"
            android:textSize="16sp" />
        <Button
            android:id="@+id/current_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_const"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/next" />
    </RelativeLayout>

</FrameLayout>